--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            /* background-color: #f4f4f9; */
             background-color: #ffe000;
             color: #333;
             scroll-behavior: smooth;
@@ -88,18 +87,14 @@
         .image-container img {
             max-width: 100%;
             height: auto;
-            transition: transform 0.3s ease; /* Added transition */
+            transition: transform 0.3s ease;
         }
-        /* .image-container img:hover {
-            transform: scale(1.1); 
-        } */
         section {
             padding: 20px;
             margin: 20px auto;
             max-width: 800px;
             background: #ffe000;
             border-radius: 8px;
-            /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
             box-shadow: 0 2px 4px rgba(239, 230, 230, 0.1);
             scroll-margin-top: 60px;
         }
@@ -147,51 +142,41 @@
             margin-bottom: 8px;
         }
         .contact .social-icons {
-    display: flex;
-    flex-direction: column; /* Align icons vertically */
-    justify-content: center;
-    align-items: center; /* Center align icons */
-    gap: 15px; /* Add more space for a cleaner look */
-    margin-top: 20px;
-}
-
-
-.contact .social-icons a {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    text-decoration: none; /* Remove underlines */
-    color: #333; /* Dark text color */
-    font-size: 14px; /* Adjust text size */
-    font-weight: 600; /* Make text bold */
-    text-align: center;
-}
-
-.contact .social-icons img {
-    width: 50px; /* Increase icon size */
-    height: 50px;
-    border-radius: 50%; /* Make icons circular */
-    /*border: 2px solid #d32f2f;  Add border for emphasis */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease; /* Smooth hover effect */
-}
-
-.contact .social-icons img:hover {
-    transform: scale(1.1); /* Slight zoom effect */
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2); /* Enhanced shadow on hover */
-}
-
-.contact .social-icons p {
-    margin-top: 5px; /* Add space between icon and text */
-    color: #1a1a1a; /* Dark text for visibility */
-    font-size: 14px; /* Smaller font for the caption */
-    margin-left: 10px;
-    transition: transform 0.3s ease-in-out
-}
-/*.contact .social-icons p:hover{
-    transform: scale(1.1);
-}*/
-
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 15px;
+            margin-top: 20px;
+        }
+        .contact .social-icons a {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            text-decoration: none;
+            color: #333;
+            font-size: 14px;
+            font-weight: 600;
+            text-align: center;
+        }
+        .contact .social-icons img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
+        }
+        .contact .social-icons img:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+        }
+        .contact .social-icons p {
+            margin-top: 5px;
+            color: #1a1a1a;
+            font-size: 14px;
+            margin-left: 10px;
+            transition: transform 0.3s ease-in-out;
+        }
     </style>
     <script>
         function toggleDropdown() {
@@ -261,12 +246,15 @@
                 <img src="instagram.png" alt="Instagram">
                 <p>Follow us on Instagram</p>
             </a>
-            <a href="https://youtube.com/@CAREERCOACHForaCompetitiveEdge?si=7FbAlLUDNXJfhXqu" target="_blank">
+            <a href="https://youtube.com/@careercoach2022?si=gfQF9IZzXLW0F53H" target="_blank">
                 <img src="youtube.png" alt="YouTube">
-                <p>Watch on YouTube</p>
+                <p>Subscribe to our YouTube</p>
+            </a>
+            <a href="https://www.facebook.com/careercoachtelangana" target="_blank">
+                <img src="facebook.png" alt="Facebook">
+                <p>Like our Facebook Page</p>
             </a>
         </div>
     </section>
-    
 </body>
 </html>
