--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <img src="instagram.png" alt="Instagram">
                 <p>Follow us on Instagram</p>
             </a>
-            <a href="https://youtube.com/@careercoach2022?si=gfQF9IZzXLW0F53H" target="_blank">
+            <a href="https://www.youtube.com/@CAREERCOACHForaCompetitiveEdge" target="_blank">
                 <img src="youtube.png" alt="YouTube">
                 <p>Subscribe to our YouTube</p>
             </a>
