--- a/index.html
+++ b/index.html
@@ -208,9 +208,24 @@
 
     <section id="updates">
         <h2>Recent Updates</h2>
-        <a href="https://drive.google.com/uc?id=1UypuDP2PzW6z_8VmWnunvllrF8otFPCZ&export=download" download="Answer_Key_Dec_01_Part_1_2024.pdf">
+        <a href="https://drive.google.com/file/d/1jMTZhezHibx8mevNjdSjpmoJheIY4nWT/view?usp=sharing" download="CC-Paper1-KEY>
             <button>
-                Answer Key Dec 01 Part 1, 2024
+                CC PAPER 1 KEY
+            </button>
+        </a>
+        <a href="https://drive.google.com/file/d/1m61b4GFvKupyuMvUqqY12c0US60wITYH/view?usp=sharing" download="CC-PAPER2-KEY">
+            <button>
+                CC PAPER 2 KEY
+            </button>
+        </a>
+        <a href="https://drive.google.com/file/d/1-lsHzO1TeptiUu1yyuyGuzpEtPuI5oPh/view?usp=sharing" download="CC-PAPER3-KEY">
+            <button>
+                CC PAPER 3 KEY
+            </button>
+        </a>
+        <a href="https://drive.google.com/file/d/1i3ZREByEooK2V85aS26-vbzk4iqWb6WF/view?usp=sharing" download="CC-PAPER4-KEY">
+            <button>
+                CC PAPER 4 KEY
             </button>
         </a>
     </section>
