--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
     <section id="updates">
         <h2>Recent Updates</h2>
-        <a href="https://drive.google.com/file/d/1jMTZhezHibx8mevNjdSjpmoJheIY4nWT/view?usp=sharing" download="CC-Paper1-KEY>
+        <a href="https://drive.google.com/file/d/1jMTZhezHibx8mevNjdSjpmoJheIY4nWT/view?usp=sharing" download="CC-PAPER1-KEY">
             <button>
                 CC PAPER 1 KEY
             </button>
