--- a/index.html
+++ b/index.html
@@ -104,17 +104,19 @@
             color: #1a1a1a;
         }
         button {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 16px;
-            font-family: 'Playfair Display', serif;
-            color: #fff;
-            background-color: #d32f2f;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: all 0.3s ease;
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-family: 'Playfair Display', serif;
+    color: #fff;
+    background-color: #d32f2f;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin: 2px;
         }
+        
         button:hover {
             background-color: #b71c1c;
             transform: scale(1.05);
